--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
@@ -87,10 +87,10 @@
                                     <i class="fa fa-calendar"></i>
                                 </span>
                                 <input id="DtIniVigencia" name="DtIniVigencia"
-                                       title="Por favor informe a data início de vigência." required
+                                      required
                                        style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
-                                       placeholder="__/__/____" class="form-control">
+                                       placeholder="__/__/____" class="form-control startdate">
                             </div>
                         </div>
 
@@ -101,10 +101,10 @@
                                     <i class="fa fa-calendar"></i>
                                 </span>
                                 <input id="DtFimVigencia" name="DtFimVigencia"
-                                       title="Por favor informe a data fim de vigência." required
+                                        required
                                        style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
-                                       placeholder="__/__/____" class="form-control">
+                                       placeholder="__/__/____" class="form-control enddate">
                             </div>
                         </div>
                     </div>
@@ -132,6 +132,7 @@
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <script src="~/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.pt-BR.min.js"></script>
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script src="~/js/unidade.js"></script>
 
 }
