--- a/Infraero.Relprev.WebUi/Views/Assunto/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Assunto/Edit.cshtml
@@ -24,8 +24,10 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto </label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="DscAssunto" class="form-control" 
-                                      placeholder="eg.: Descrição do  assunto relacionado as  ocorrências " maxlength="50">@Model.DscAssunto</textarea>
+                            <textarea type="text" rows="3" name="DscAssunto" class="form-control"
+                                      placeholder="eg.: Descrição do  assunto relacionado as  ocorrências."
+                                      title="Por favor informe a descrição do  assunto relacionado as  ocorrências"
+                                      required maxlength="255">@Model.DscAssunto</textarea>
                         </div>
                     </div>
                 </div>
@@ -58,12 +60,12 @@
 
 
             // checkbox, radio and selects
-            $("#form").each(function() {
+            $("#form").each(function () {
                 $(this).validate({
-                    highlight: function(element) {
+                    highlight: function (element) {
                         $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
                     },
-                    success: function(element) {
+                    success: function (element) {
                         $(element).closest('.form-group').removeClass('has-error');
                     }
                 });
