--- a/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.LocalModel
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Local", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "Local", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -23,13 +23,21 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome da unidade de infraestrutura </label>
                         <div class="col-lg-9">
-                            @Html.DropDownList("CodUnidadeInfraestrutura", @Model.ListUnidadeInfraestrutura, "SELECIONAR", new { @class = "form-control populate", name = "ddlUnidadeInfraestrutura", style = "100%" })
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura"
+                                    asp-items="Model.ListUnidadeInfraestrutura">
+                                <option value="">Selecionar Unidade de infraestrutura</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="DscLocal" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscLocal" class="form-control" 
+                                      placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências" 
+                                      title="eg.: Descrição do  sub assunto relacionado as  ocorrências" 
+                                      required maxlength="50"></textarea>
                         </div>
                         <label class="col-sm-3 control-label text-sm-right pt-2"></label>
 
@@ -55,35 +63,61 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
 
     <script>
-        // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            var $select = $(".select2").select2({
+                allowClear: true
+            });
 
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
-                            opts = {};
+            $(".select2").each(function () {
+                var $this = $(this),
+                    opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                var pluginOptions = $this.data('plugin-options');
+                if (pluginOptions)
+                    opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
-                    });
-                });
+                $this.themePluginSelect2(opts);
+            });
 
-            }
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+
+            $select.on('change', function () {
+                $(this).trigger('blur');
+            });
+
+            $("#form").validate({
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
+
 
         }).apply(this, [jQuery]);
 
     </script>
 }
-
 
 
