--- a/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
@@ -23,8 +23,11 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome da unidade de infraestrutura </label>
                         <div class="col-lg-9">
-                            @Html.DropDownList("CodUnidadeInfraestrutura", new SelectList(Model.ListUnidadeInfraestrutura, "Value", "Text", Model.Local.UnidadeInfraestrutura.CodUnidadeInfraestrutura), "SELECIONAR", new { @class = "form-control populate", name = "ddlUnidadeInfraestrutura", style = "100%" })
-                        </div>
+                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
+                                    title="Por favor selecione uma unidade de infraestrutura." required
+                                    asp-for="CodUnidadeInfraestrutura" asp-items='Model.ListUnidadeInfraestrutura'>
+                                <option value="">Selecionar Unidade de infraestrutura</option>
+                            </select></div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
@@ -62,25 +65,35 @@
 
             'use strict';
 
-            if ($.isFunction($.fn['select2'])) {
+            var $select = $(".select2").select2({
+                allowClear: true
+            });
 
-                $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
-                        var $this = $(this),
-                            opts = {};
+            $(".select2").each(function () {
+                var $this = $(this),
+                    opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                var pluginOptions = $this.data('plugin-options');
+                if (pluginOptions)
+                    opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
-                    });
-                });
+                $this.themePluginSelect2(opts);
+            });
 
-            }
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+
+            $select.on('change', function () {
+                $(this).trigger('blur');
+            });
 
         }).apply(this, [jQuery]);
-
+        (function ($) {
+            $('#ddlUnidadeInfraestrutura').val(@Model.Local.UnidadeInfraestrutura.CodUnidadeInfraestrutura);
+            $('#ddlUnidadeInfraestrutura').trigger('change');
+        }).apply(this, [jQuery]);
     </script>
 }
 
