--- a/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Infraero.Relprev.CrossCutting.Models.SubAssuntoModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar Sub Assunto";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "SubAssunto", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "SubAssunto", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -21,24 +21,24 @@
                     <h2 class="card-title">Cadastrar Sub Assunto da Ocorrência</h2>
 
                 </header>
-                <div class="card-body">
+                <div id="vSubAssunto" class="card-body" data-loading-overlay>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-lg-9">
-                            @*<select data-plugin-selectTwo class="form-control populate">
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                </select>*@
-                            @Html.DropDownList("CodAssunto", @Model.ListAssunto, "SELECIONAR", new
-                            {
-                                @class = "form-control populate", name = "ddlAssunto", style = "100%" 
-                            })
+                            <select class="form-control populate select2" name="ddlAssunto" id="ddlAssunto"
+                                    title="Por favor selecione um assunto." required
+                                    asp-for="CodAssunto" asp-items="Model.ListAssunto">
+                                <option value="">Selecionar Assunto</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" 
+                                      placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências"
+                                      title="eg.: Descrição do  sub assunto relacionado as  ocorrências"
+                                      required maxlength="50"></textarea>
                         </div>
                     </div>
                 </div>
@@ -61,33 +61,58 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
 
     <script>
-        // Select2
         (function ($) {
 
             'use strict';
 
-            if ($.isFunction($.fn['select2'])) {
+            var $select = $(".select2").select2({
+                allowClear: true
+            });
 
-                $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
-                        var $this = $(this),
-                            opts = {};
+            $(".select2").each(function () {
+                var $this = $(this),
+                    opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                var pluginOptions = $this.data('plugin-options');
+                if (pluginOptions)
+                    opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
-                    });
-                });
+                $this.themePluginSelect2(opts);
+            });
 
-            }
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
 
-            $("select").attr('data-plugin-selectTwo');
+            $select.on('change', function () {
+                $(this).trigger('blur');
+            });
 
+            $("#form").validate({
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
+
+            
         }).apply(this, [jQuery]);
 
     </script>
