--- a/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
@@ -27,7 +27,8 @@
                                     title="Por favor selecione uma unidade de infraestrutura." required
                                     asp-for="CodUnidadeInfraestrutura" asp-items='Model.ListUnidadeInfraestrutura'>
                                 <option value="">Selecionar Unidade de infraestrutura</option>
-                            </select></div>
+                            </select>
+                        </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
@@ -57,6 +58,7 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
 
     <script>
@@ -93,6 +95,7 @@
         (function ($) {
             $('#ddlUnidadeInfraestrutura').val(@Model.Local.UnidadeInfraestrutura.CodUnidadeInfraestrutura);
             $('#ddlUnidadeInfraestrutura').trigger('change');
+            
         }).apply(this, [jQuery]);
     </script>
 }
