--- a/Infraero.Relprev.WebUi/Views/SubLocal/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubLocal/Edit.cshtml
@@ -143,7 +143,8 @@
 
                 $('#ddlUnidadeInfraestrutura').val(@Model.SubLocal.CodUnidadeInfraestrutura);
                 $('#ddlUnidadeInfraestrutura').trigger('change');
-
+                $('#ddlLocal').val(@Model.SubLocal.CodLocal);
+                $('#ddlLocal').trigger('change');
                 
 
             }).apply(this, [jQuery]);
